# ChatPDFv2

./: .gitignore  README.md  pyproject.toml
chatpdfv2/: __init__.py
chatpdfv2/config/: __init__.py
chatpdfv2/core/: __init__.py  interpreter.py
chatpdfv2/interfaces/: cli.py
chatpdfv2/services/: __init__.py  mineru.py  openai_client.py
tests/: test_utils.py
